<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.carros.RegistrarAuto"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:text="@string/agregarCarro"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:hint="@string/Placa" />

    <TextView
        android:id="@+id/lblMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Marca"
        tools:text="@string/Marca" />

    <Spinner
        android:id="@+id/cmbMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Modelo"
        tools:text="@string/Modelo" />

    <Spinner
        android:id="@+id/cmbModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Color"
        tools:text="@string/Marca" />

    <Spinner
        android:id="@+id/cmbColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:hint="@string/Precio"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/Guardar"
            tools:text="@string/Guardar" />


        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/Limpiar"
            tools:text="@string/Limpiar" />

    </LinearLayout>

</LinearLayout>
